crates/lex-core/tests/snapshots/tokenizer_elements__annotation_flat_marker_with_label.snap
---
source: lex-parser/tests/tokenizer_elements.rs
expression: tokens
---
[
    (
        LexMarker,
        0..2,
    ),
    (
        Whitespace(
            1,
        ),
        2..3,
    ),
    (
        Text(
            "note",
        ),
        3..7,
    ),
    (
        Whitespace(
            1,
        ),
        7..8,
    ),
    (
        LexMarker,
        8..10,
    ),
    (
        Whitespace(
            1,
        ),
        10..11,
    ),
    (
        Text(
            "Important",
        ),
        11..20,
    ),
    (
        Whitespace(
            1,
        ),
        20..21,
    ),
    (
        Text(
            "information",
        ),
        21..32,
    ),
    (
        BlankLine(
            Some(
                "\n",
            ),
        ),
        32..33,
    ),
]
