crates/lex-core/tests/snapshots/tokenizer_elements__annotation_flat_marker_with_params.snap
---
source: lex-parser/tests/tokenizer_elements.rs
expression: tokens
---
[
    (
        LexMarker,
        0..2,
    ),
    (
        Whitespace(
            1,
        ),
        2..3,
    ),
    (
        Text(
            "warning",
        ),
        3..10,
    ),
    (
        Whitespace(
            1,
        ),
        10..11,
    ),
    (
        Text(
            "severity",
        ),
        11..19,
    ),
    (
        Equals,
        19..20,
    ),
    (
        Text(
            "high",
        ),
        20..24,
    ),
    (
        Whitespace(
            1,
        ),
        24..25,
    ),
    (
        LexMarker,
        25..27,
    ),
    (
        BlankLine(
            Some(
                "\n",
            ),
        ),
        27..28,
    ),
]
