crates/lex-core/tests/snapshots/tokenizer_elements__definition_flat_multiline_label.snap
---
source: lex-parser/tests/tokenizer_elements.rs
expression: tokens
---
[
    (
        Text(
            "Microservice",
        ),
        0..12,
    ),
    (
        Colon,
        12..13,
    ),
    (
        BlankLine(
            Some(
                "\n",
            ),
        ),
        13..14,
    ),
    (
        Indent(
            [
                (
                    Indentation,
                    14..18,
                ),
            ],
        ),
        0..0,
    ),
    (
        Text(
            "An",
        ),
        18..20,
    ),
    (
        Whitespace(
            1,
        ),
        20..21,
    ),
    (
        Text(
            "architectural",
        ),
        21..34,
    ),
    (
        Whitespace(
            1,
        ),
        34..35,
    ),
    (
        Text(
            "style",
        ),
        35..40,
    ),
    (
        Whitespace(
            1,
        ),
        40..41,
    ),
    (
        Text(
            "that",
        ),
        41..45,
    ),
    (
        Whitespace(
            1,
        ),
        45..46,
    ),
    (
        Text(
            "structures",
        ),
        46..56,
    ),
    (
        Whitespace(
            1,
        ),
        56..57,
    ),
    (
        Text(
            "applications",
        ),
        57..69,
    ),
    (
        Whitespace(
            1,
        ),
        69..70,
    ),
    (
        Text(
            "as",
        ),
        70..72,
    ),
    (
        Whitespace(
            1,
        ),
        72..73,
    ),
    (
        Text(
            "loosely",
        ),
        73..80,
    ),
    (
        Whitespace(
            1,
        ),
        80..81,
    ),
    (
        Text(
            "coupled",
        ),
        81..88,
    ),
    (
        Whitespace(
            1,
        ),
        88..89,
    ),
    (
        Text(
            "services",
        ),
        89..97,
    ),
    (
        Period,
        97..98,
    ),
    (
        BlankLine(
            Some(
                "\n",
            ),
        ),
        98..99,
    ),
    (
        BlankLine(
            Some(
                "\n",
            ),
        ),
        99..100,
    ),
    (
        Text(
            "Each",
        ),
        104..108,
    ),
    (
        Whitespace(
            1,
        ),
        108..109,
    ),
    (
        Text(
            "service",
        ),
        109..116,
    ),
    (
        Whitespace(
            1,
        ),
        116..117,
    ),
    (
        Text(
            "is",
        ),
        117..119,
    ),
    (
        Whitespace(
            1,
        ),
        119..120,
    ),
    (
        Text(
            "independently",
        ),
        120..133,
    ),
    (
        Whitespace(
            1,
        ),
        133..134,
    ),
    (
        Text(
            "deployable",
        ),
        134..144,
    ),
    (
        Whitespace(
            1,
        ),
        144..145,
    ),
    (
        Text(
            "and",
        ),
        145..148,
    ),
    (
        Whitespace(
            1,
        ),
        148..149,
    ),
    (
        Text(
            "scalable",
        ),
        149..157,
    ),
    (
        Period,
        157..158,
    ),
    (
        BlankLine(
            Some(
                "\n",
            ),
        ),
        158..159,
    ),
    (
        BlankLine(
            Some(
                "\n",
            ),
        ),
        159..160,
    ),
    (
        Dedent(
            [],
        ),
        0..0,
    ),
    (
        Text(
            "Something",
        ),
        160..169,
    ),
    (
        Whitespace(
            1,
        ),
        169..170,
    ),
    (
        Text(
            "to",
        ),
        170..172,
    ),
    (
        Whitespace(
            1,
        ),
        172..173,
    ),
    (
        Text(
            "finish",
        ),
        173..179,
    ),
    (
        Whitespace(
            1,
        ),
        179..180,
    ),
    (
        Text(
            "the",
        ),
        180..183,
    ),
    (
        Whitespace(
            1,
        ),
        183..184,
    ),
    (
        Text(
            "element",
        ),
        184..191,
    ),
]
