crates/lex-core/tests/snapshots/tokenizer_elements__definition_nested_in_session.snap
---
source: lex-parser/tests/tokenizer_elements.rs
expression: tokens
---
[
    (
        Text(
            "HTTP",
        ),
        0..4,
    ),
    (
        Whitespace(
            1,
        ),
        4..5,
    ),
    (
        Text(
            "Methods",
        ),
        5..12,
    ),
    (
        Colon,
        12..13,
    ),
    (
        BlankLine(
            Some(
                "\n",
            ),
        ),
        13..14,
    ),
    (
        BlankLine(
            Some(
                "\n",
            ),
        ),
        14..15,
    ),
    (
        Indent(
            [
                (
                    Indentation,
                    15..19,
                ),
            ],
        ),
        0..0,
    ),
    (
        Dash,
        19..20,
    ),
    (
        Whitespace(
            1,
        ),
        20..21,
    ),
    (
        Text(
            "GET",
        ),
        21..24,
    ),
    (
        Colon,
        24..25,
    ),
    (
        Whitespace(
            1,
        ),
        25..26,
    ),
    (
        Text(
            "Retrieve",
        ),
        26..34,
    ),
    (
        Whitespace(
            1,
        ),
        34..35,
    ),
    (
        Text(
            "resources",
        ),
        35..44,
    ),
    (
        BlankLine(
            Some(
                "\n",
            ),
        ),
        44..45,
    ),
    (
        Dash,
        49..50,
    ),
    (
        Whitespace(
            1,
        ),
        50..51,
    ),
    (
        Text(
            "POST",
        ),
        51..55,
    ),
    (
        Colon,
        55..56,
    ),
    (
        Whitespace(
            1,
        ),
        56..57,
    ),
    (
        Text(
            "Create",
        ),
        57..63,
    ),
    (
        Whitespace(
            1,
        ),
        63..64,
    ),
    (
        Text(
            "resources",
        ),
        64..73,
    ),
    (
        BlankLine(
            Some(
                "\n",
            ),
        ),
        73..74,
    ),
    (
        Dash,
        78..79,
    ),
    (
        Whitespace(
            1,
        ),
        79..80,
    ),
    (
        Text(
            "PUT",
        ),
        80..83,
    ),
    (
        Colon,
        83..84,
    ),
    (
        Whitespace(
            1,
        ),
        84..85,
    ),
    (
        Text(
            "Update",
        ),
        85..91,
    ),
    (
        Whitespace(
            1,
        ),
        91..92,
    ),
    (
        Text(
            "resources",
        ),
        92..101,
    ),
    (
        BlankLine(
            Some(
                "\n",
            ),
        ),
        101..102,
    ),
    (
        Dash,
        106..107,
    ),
    (
        Whitespace(
            1,
        ),
        107..108,
    ),
    (
        Text(
            "DELETE",
        ),
        108..114,
    ),
    (
        Colon,
        114..115,
    ),
    (
        Whitespace(
            1,
        ),
        115..116,
    ),
    (
        Text(
            "Remove",
        ),
        116..122,
    ),
    (
        Whitespace(
            1,
        ),
        122..123,
    ),
    (
        Text(
            "resources",
        ),
        123..132,
    ),
    (
        BlankLine(
            Some(
                "\n",
            ),
        ),
        132..133,
    ),
    (
        BlankLine(
            Some(
                "\n",
            ),
        ),
        133..134,
    ),
    (
        Dedent(
            [],
        ),
        0..0,
    ),
    (
        Text(
            "Something",
        ),
        134..143,
    ),
    (
        Whitespace(
            1,
        ),
        143..144,
    ),
    (
        Text(
            "to",
        ),
        144..146,
    ),
    (
        Whitespace(
            1,
        ),
        146..147,
    ),
    (
        Text(
            "finish",
        ),
        147..153,
    ),
    (
        Whitespace(
            1,
        ),
        153..154,
    ),
    (
        Text(
            "the",
        ),
        154..157,
    ),
    (
        Whitespace(
            1,
        ),
        157..158,
    ),
    (
        Text(
            "element",
        ),
        158..165,
    ),
]
