crates/lex-core/tests/snapshots/tokenizer_elements__list_flat_mixed_decorations.snap
---
source: lex-parser/tests/tokenizer_elements.rs
expression: tokens
---
[
    (
        Text(
            "Test",
        ),
        0..4,
    ),
    (
        Colon,
        4..5,
    ),
    (
        BlankLine(
            Some(
                "\n",
            ),
        ),
        5..6,
    ),
    (
        BlankLine(
            Some(
                "\n",
            ),
        ),
        6..7,
    ),
    (
        OpenParen,
        7..8,
    ),
    (
        Number(
            "1",
        ),
        8..9,
    ),
    (
        CloseParen,
        9..10,
    ),
    (
        Whitespace(
            1,
        ),
        10..11,
    ),
    (
        Text(
            "First",
        ),
        11..16,
    ),
    (
        Whitespace(
            1,
        ),
        16..17,
    ),
    (
        Text(
            "parenthetical",
        ),
        17..30,
    ),
    (
        Whitespace(
            1,
        ),
        30..31,
    ),
    (
        Text(
            "item",
        ),
        31..35,
    ),
    (
        BlankLine(
            Some(
                "\n",
            ),
        ),
        35..36,
    ),
    (
        OpenParen,
        36..37,
    ),
    (
        Number(
            "2",
        ),
        37..38,
    ),
    (
        CloseParen,
        38..39,
    ),
    (
        Whitespace(
            1,
        ),
        39..40,
    ),
    (
        Text(
            "Second",
        ),
        40..46,
    ),
    (
        Whitespace(
            1,
        ),
        46..47,
    ),
    (
        Text(
            "parenthetical",
        ),
        47..60,
    ),
    (
        Whitespace(
            1,
        ),
        60..61,
    ),
    (
        Text(
            "item",
        ),
        61..65,
    ),
    (
        BlankLine(
            Some(
                "\n",
            ),
        ),
        65..66,
    ),
    (
        OpenParen,
        66..67,
    ),
    (
        Number(
            "3",
        ),
        67..68,
    ),
    (
        CloseParen,
        68..69,
    ),
    (
        Whitespace(
            1,
        ),
        69..70,
    ),
    (
        Text(
            "Third",
        ),
        70..75,
    ),
    (
        Whitespace(
            1,
        ),
        75..76,
    ),
    (
        Text(
            "parenthetical",
        ),
        76..89,
    ),
    (
        Whitespace(
            1,
        ),
        89..90,
    ),
    (
        Text(
            "item",
        ),
        90..94,
    ),
    (
        BlankLine(
            Some(
                "\n",
            ),
        ),
        94..95,
    ),
]
